# whoami

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: docker-image.yml
src/: main.rs
