[package]
name = "whoami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
colored = "1.9"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
uuid = { version = "0.8", features = ["v4"] }
sysinfo = {version = "0.29.8", features = ["serde"]}
