[package]
name = "whoami"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2"
hyper = { version = "0.14.12", features = ["full"] }
tokio = { version = "1.18.5", features = ["full"] }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sysinfo = { version = "0.29.8", features = ["serde"] }
json_to_table = "0.5.0"
h2 = "0.3.17"